--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -128,3 +128,19 @@
     align-items: stretch;
     transform: rotate(-10deg);
 }
+
+.test-grid{
+    background-color:  blue;
+}
+
+.test-div1{
+    background-color: red;
+}
+
+.test-div2{
+    background-color:green;
+}
+
+.test-div3{
+    background-color: yellow;
+}
