--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -1,24 +1,26 @@
 {% block header %}
-<div class="top-bar">
+{# <div class="top-bar">
     <div class="top-bar-title">
-        <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-            <button class="menu-icon" type="button" style="float: right" data-toggle></button>
+        <span data-responsive-toggle="responsive-menu" data-hide-for="large">
+            <button class="menu-icon" type="button" data-toggle></button>
         </span>
         <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>  
     </div>
-    <div id="responsive-menu">
-        <div class="top-bar-right">
-            <ul class="accordion vertical medium-horizontal menu" data-accordion-menu>
-                <li><a href="#">Mijn Profiel</a></li>
-                <li><a href="#">Mijn Sollicitaties</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
+ 
+        <div id="responsive-menu">
+            <div class="top-bar-right">   
+                    <ul class="dropdown vertical medium-horizontal menu" data-dropdown-menu>
+                        <li><a href="#" class="menu-colors">Mijn Profiel</a></li>
+                        <li><a href="#" class="menu-colors">Mijn Sollicitaties</a></li>
+                        <li><a href="#" class="menu-colors">Logout</a></li>
+                    </ul>
+            </div>
         </div>
-    </div>
-</div>    
+     
+</div>  #}
 
 
-{# <div class="top-bar header" id="responsive-menu">
+<div class="top-bar header" id="responsive-menu">
     <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
       <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>  
@@ -43,7 +45,7 @@
         {% endif %}
         </ul>
     </div>
-</div> #}
+</div>
 
 <div class="small-12 medium-12 large-12">
   <div class="triangle triangle-homepage">
