--- a/public/assets/css/foundation.css
+++ b/public/assets/css/foundation.css
@@ -3690,20 +3690,20 @@ select {
 .menu-icon {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
-  width: 50px;
-  height: 30px;
+  vertical-align: center;
+  width: 100px;
+  height: 60px;
   cursor: pointer; }
   .menu-icon::after {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;;
     display: block;
     width: 100%;
-    height: 4px;
+    height: 8px;
     background: #fefefe;
-    -webkit-box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
-            box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
+    -webkit-box-shadow: 0 20px 0 #fefefe, 0 40px 0 #fefefe;
+            box-shadow: 0 20px 0 #fefefe, 0 40px 0 #fefefe;
     content: ''; }
   .menu-icon:hover::after {
     background: #cacaca;
