--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -13,25 +13,15 @@
 .display {
     display: inline-block;
     width: 100%;
-    font-family: 'robotocondensed';
+    font-family: 'robotocondensed';    
     border-bottom : 2px solid #F15A24;
-    font-size: 32px;
+    font-size: 20px;
 }
 
 .motivation {
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 16px;
-
-}
-
-.profile-edit input{
-    width: 100%;
-    font-family: 'robotocondensed';
-    font-size: 32px;
-    box-shadow: none;
-    border: none;
-    border-bottom : 2px solid #F15A24;
 }
 
 .richtext {
@@ -43,6 +33,15 @@
 .inputtext{
     font-family: 'robotocondensed';
     font-size: 32px;
+}
+
+.input[type=text] {
+    width: 100%;
+    font-family: 'robotocondensed';
+    font-size: 20px;
+    box-shadow: none;
+    border: none;
+    border-bottom : 2px solid #F15A24;
 }
 
 .input[type=submit] {
