--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -1,19 +1,19 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-        <div class="grid-x">
-            <div class="small-3 medium-3 large-3">
+        <div class="grid-x grid-padding-x">
+            <div class="large-4 hide-for-small-only hide-for-medium-only">
                 <br>
                 <img src="{{ asset('assets/logo/warning-sign.png')}}">
             </div>
         
-            <div class="small-9 medium-9 large-9 inputstyle">
+            <div class="small-12 medium-12 large-8 cell inputstyle">
                 <h2 style="font-family:bebas_neueregular; color: #F15A24">Registratie</h2>
                 {{ form_widget(form) }}
             </div>
         </div>
 
-            <div class="grid-x">
+            <div class="grid-x grid-padding-x">
                 <div class="small-12 medium-12 large-12">
                     <br><button type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-succes right" style="font-size: 3rem; color: #F15A24"><i class="fas fa-arrow-right"></i></button>
                 </div>
