--- a/templates/homepage/alternative/index.html.twig
+++ b/templates/homepage/alternative/index.html.twig
@@ -3,31 +3,32 @@
 {% block title %}All Available Vacancies{% endblock %}
 
 {% block content %}
-    
-    <table id="table_id" class="althomepagetable">
-        <thead>
-            <tr>
-                <th>Datum</th>
-                <th>Functie</th>
-                <th>Bedrijf</th>
-                <th>Locatie</th>
-                <th>Niveau</th>
-                <th>Platform</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for vacancy in vacancies %}
-            <tr>
-                <td>{{ vacancy.vacancydate|date("d-m-Y") }}</td>
-                <td><a href="/vacancy/show/{{vacancy.id}}" class="orangetext">{{ vacancy.function }}</a></td> 
-                <td><a href="/userprofile/show/{{vacancy.user.id}}" class="greytext">{{ vacancy.user.companyname}}</a></td>
-                <td>{{ vacancy.location}}</td>
-                <td>{{ vacancy.level }}</td>
-                <td>{{ vacancy.platform.name}}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table><br>
-
-                
+<div class="grid-x grid-padding-x align-left">
+    <div class="cell small-120 medium-12 large-12">  
+        <table id="table_id" class="althomepagetable">
+            <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Functie</th>
+                    <th>Bedrijf</th>
+                    <th>Locatie</th>
+                    <th>Niveau</th>
+                    <th>Platform</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for vacancy in vacancies %}
+                <tr>
+                    <td>{{ vacancy.vacancydate|date("d-m-Y") }}</td>
+                    <td><a href="/vacancy/show/{{vacancy.id}}" class="orangetext">{{ vacancy.function }}</a></td> 
+                    <td><a href="/userprofile/show/{{vacancy.user.id}}" class="greytext">{{ vacancy.user.companyname}}</a></td>
+                    <td>{{ vacancy.location}}</td>
+                    <td>{{ vacancy.level }}</td>
+                    <td>{{ vacancy.platform.name}}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table><br>           
+    </div>
+</div>
 {% endblock %}
