--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -3,99 +3,92 @@
 {% block title %}{{ profile.lastname }}, {{ profile.firstname|first }} {% endblock %}
 
 {% block logo %}
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-            <br><div class="hexagonprofile">
-                <img class="hexagonprofile-img" src="{{ profile.profilepictureurl }}">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12">
+            <div class="box">
+                <div class="medium-1 large-1"></div>
+                <div class="medium-7 large-7">
+                    <br><div class="hexagonprofile">
+                        <img class="hexagonprofile-img" src="{{ profile.profilepictureurl }}">
+                    </div>
+                </div>
+                <div class="medium-4 large-4"></div>
             </div>
-        </div>
-        <div class="small-3 medium-3 large-3">
         </div>
     </div>
 {% endblock %}
 
 
 {% block content %}
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12">
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell">
             <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Profiel</h2>
         </div>
     </div>
     
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3"> 
-            <label>Voornaam</label> 
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-6 large-6 cell"> 
+            <br><label>Voornaam</label> 
             <span class="display">{{ profile.firstname }}</span>
         </div>
 
-        <div class="small-1 medium-1 large-1">
-        </div>
-
-        <div class="small-8 medium-8 large-8"> 
-            <label>Achternaam</label>
+        <div class="small-12 medium-6 large-6 cell"> 
+            <br><label>Achternaam</label>
             <span class="display">{{ profile.lastname }}</span>
         </div>       
     </div>
 
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12"> 
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell"> 
             <br><label>Email</label>
             <span class="display">{{ profile.email }}</span>
         </div>
     </div>
 
-     <div class="grid-x">
-        <div class="small-3 medium-3 large-3"> 
+     <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-6 large-6 cell"> 
             <br><label>Geboortedatum</label>
             <span class="display">{{ profile.dateofbirth|date('d-m-Y') }}</span>
         </div>
 
-        <div class="small-1 medium-1 large-1">
-        </div>
-
-        <div class="small-8 medium-8 large-8"> 
+        <div class="small-12 medium-6 large-6 cell"> 
             <br><label>Telefoonnummer</label>
             <span class="display">{{ profile.phonenumber }}</span>
         </div>       
     </div>
 
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12"> 
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell"> 
             <br><label>Adres</label>
             <span class="display">{{ profile.address }}</span>
         </div>
     </div>
 
-     <div class="grid-x">
-        <div class="small-3 medium-3 large-3"> 
+     <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-6 large-6 cell"> 
             <br><label>Postcode</label>
             <span class="display">{{ profile.zipcode }}</span>
         </div>
 
-        <div class="small-1 medium-1 large-1">
-        </div>
-
-        <div class="small-8 medium-8 large-8"> 
+        <div class="small-12 medium-6 large-6 cell"> 
             <br><label>Woonplaats</label>
             <span class="display">{{ profile.city }}</span>
         </div>       
     </div>
 
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12"> 
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell"> 
             <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Motivatie</h2>
             <span class="motivation">{{ profile.description}}</span><br><br>
         </div>
     </div>
 
-    <div class="grid-x">
-        <div class="small-6 medium-6 large-6"> 
+    <div class="grid-x grid-padding-x">
+        <div class="small-6 medium-6 large-6 cell"> 
             Hier komt het pdf symbool + bestandsnaam!
         </div>
 
-        <div class="small-6 medium-6 large-6"> 
+        <div class="small-6 medium-6 large-6 cell"> 
             <span><button type="submit" id="_submit" name="_submit" class="btn btn-succes, right" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">Opslaan</i></button>
             <button type="submit" id="_submit" name="_submit" class="btn btn-succes; right" style="font-size: 3rem; color: #F15A24; "><i class="fas fa-arrow-right"></i></button></span>
         </div>
