--- a/templates/vacancy/addvacancy.html.twig
+++ b/templates/vacancy/addvacancy.html.twig
@@ -3,13 +3,15 @@
 {% block title %}Vacature Toevoegen{% endblock %}
 
 {% block logo %}
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-           <br><a href="/userprofile/show/{{user.id}}"><img class="sizedimg" src="{{ user.profilepictureurl }}"></a>
-        </div>
-        <div class="small-3 medium-3 large-3">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12">
+            <div class="box">
+                <div class="small-8 medium-8 large-8">
+                <br><a href="/userprofile/show/{{user.id}}"><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
+                </div>
+                <div class="small-4 medium-4 large-4">
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
@@ -18,16 +20,16 @@
 {% block content %}
     <form action="/vacancy/save/" method="POST">
         <input type="hidden" name="id" value="{{ user.id }}">
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell">
                     <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Mijn Vacature</h2>
                         <label>Functienaam</label> 
-                        <input type="text" id="function" name="function" placeholder="Voeg naam van de functie toe" value=""/>
+                        <input class="input" type="text" id="function" name="function" placeholder="Voeg naam van de functie toe" value=""/>
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell custom-select-vacancy" >
                     <br><label>Niveau</label> 
                         <select class="custom-select-vacancy" id="level" name="level" value=""/>
                             <option lass="custom-options-vacancy" value="" disabled selected>-Kies gewenst niveau-</option>
@@ -38,8 +40,8 @@
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell custom-select-vacancy" >
                     <br><label>Platform</label> 
                         <select class="custom-select-vacancy" id="platform" name="platform" placeholder="Kies gewenst platform" value=""/>
                             <option lass="custom-options-vacancy" value="" disabled selected>-Kies gewenst platform-</option>
@@ -50,22 +52,22 @@
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell">
                     <br><label>Locatie</label> 
-                    <input type="text" id="location" name="location" placeholder="Kies locatie" value=""/>
+                    <input class="input" type="text" id="location" name="location" placeholder="Kies locatie" value=""/>
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell">
                     <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Omschrijving</h2>
                     <span><textarea class="content" id="job_description" name="job_description"></textarea></span> 
                         {# See: https://github.com/webfashionist/RichText/blob/master/examples/fontawesome5.html #}
                 </div>
             </div>
             
-            <div class="grid-x">
+            <div class="grid-x grid-padding-x">
                 <div class="small-12 medium-12 large-12 orangetext-vacancysave">
                     <br><button type="submit" id="_submit" name="_submit" class="btn btn-succes, orangetext-vacancysave">
                     <i class="fas fa-arrow-right"></i> 
