--- a/templates/vacancy/editvacancy.html.twig
+++ b/templates/vacancy/editvacancy.html.twig
@@ -3,13 +3,15 @@
 {% block title %}{{ vacancy.function }}{% endblock %}
 
 {% block logo %}
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-           <br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="sizedimg" src="{{ vacancy.user.profilepictureurl }}"></a>
-        </div>
-        <div class="small-3 medium-3 large-3">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12 cell">
+            <div class="box">
+                <div class="medium-8 large-8">
+                <br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
+                </div>
+                <div class="medium-4 large-4">
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
@@ -18,16 +20,16 @@
 {% block content %}
     <form action="/vacancy/update/{{ vacancy.id }}" method="POST">
         <input type="hidden" name="id" value="{{ user.id }}">
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell">
                     <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Mijn Vacature</h2>
                         <label>Functienaam</label> 
-                        <input type="text" id="function" name="function" value="{{ vacancy.function }}"/>
+                        <input class="input" type="text" id="function" name="function" value="{{ vacancy.function }}"/>
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell custom-select-vacancy" >
                     <br><label>Niveau</label> 
                         <select class="custom-select-vacancy" id="level" name="level" value="{{ vacancy.level }}"/>
                             <option class="custom-options-vacancy" value="Junior">Junior</option>
@@ -37,8 +39,8 @@
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 custom-select-vacancy" >
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell custom-select-vacancy" >
                     <br><label>Platform</label> 
                         <select class="custom-select-vacancy" id="platform" name="platform" value="{{ vacancy.platform.name }}"/>
                             {% for platform in platforms %}
@@ -48,23 +50,23 @@
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell">
                     <br><label>Locatie</label> 
-                    <input type="text" id="location" name="location" value="{{ vacancy.location }}"/>
+                    <input class="input" type="text" id="location" name="location" value="{{ vacancy.location }}"/>
                 </div>
             </div>
 
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 vacancy-edit">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell vacancy-edit">
                     <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Omschrijving</h2>
-                    <span><textarea class="content" id="job_description" name="job_description">{{  vacancy.jobdescription }}</textarea></span> 
+                    <span><textarea class="content" id="job_description" name="job_description">{{ vacancy.jobdescription }}</textarea></span> 
                         {# See: https://github.com/webfashionist/RichText/blob/master/examples/fontawesome5.html #}
                 </div>
             </div>
             
-            <div class="grid-x">
-                <div class="small-12 medium-12 large-12 orangetext-vacancysave">
+            <div class="grid-x grid-padding-x">
+                <div class="small-12 medium-12 large-12 cell orangetext-vacancysave">
                     <br><button type="submit" id="_submit" name="_submit" class="btn btn-succes, orangetext-vacancysave">
                     <i class="fas fa-arrow-right"></i> 
                     <input class="orangetext-vacancysave" type="submit" value="Opslaan" style="border: none; background: none"/>
