--- a/templates/vacancy/employervacancies.html.twig
+++ b/templates/vacancy/employervacancies.html.twig
@@ -3,20 +3,21 @@
 {% block title %}All Vacancies by {{ user.companyname }}{% endblock %}
 
 {% block logo %}
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-           <br><a href="/userprofile/show/{{user.id}}"><img class="sizedimg" src="{{ user.profilepictureurl }}"></a>
-        </div>
-        <div class="small-3 medium-3 large-3">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12">
+            <div class="box">
+                <div class="small-8 medium-8 large-8">
+                    <br><a href="/userprofile/show/{{user.id}}"><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
+                </div>
+                <div class="small-4 medium-4 large-4"></div>
+            </div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12 vacancy-edit">
+    <div class="grid-x grid-padding-x align-center">
+        <div class="small-12 medium-12 large-12 cell">
             <br><h2 style="font-family:bebas_neueregular; color: #F15A24">Vacatures</h2>
                 <table id="table_id" class="myvacanciestable">
                     <thead>
@@ -44,8 +45,8 @@
                 </table><br>     
         </div>
     </div>
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12 vacancy-edit">
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell">
             <button type="submit" id="_submit" name="_submit" class="btn btn-succes">
                 <a href="/vacancy/add/" class="orangetext-addvacancy">
                 <i class="fas fa-arrow-right"></i>  Vacature Toevoegen</a>
