--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -3,58 +3,64 @@
 {% block title %}{{ vacancy.function }}{% endblock %}
 
 {% block logo %}
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-            <br><div class="hexagonplatforms">
-                <img class="hexagonplatforms-img" src="{{ vacancy.platform.iconurl }}">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12 cell">
+            <div class="box">
+                <div class="medium-8 large-8">
+                    <br><div class="hexagonplatforms">
+                        <img class="hexagonplatforms-img" src="{{ vacancy.platform.iconurl }}">
+                    </div>
+                </div>
+                <div class="medium-4 large-4">
+                </div>
             </div>
         </div>
-        <div class="small-3 medium-3 large-3">
-        </div>
     </div>
-    <div class="grid-x">
-        <div class="small-3 medium-3 large-3">
-        </div>
-        <div class="small-6 medium-6 large-6">
-           <br><br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
-        </div>
-        <div class="small-3 medium-3 large-3">
+    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+        <div class="medium-12 large-12 cell">
+            <div class="box">
+                <div class="medium-6 large-6">
+                <br><br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
+                </div>
+                <div class="medium-6 large-6">
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
 
             
 {% block content %}
-    <div class="grid-x">
-        <div class="small-12 medium-12 large-12">
-            <br><span class="datestyle">{{ vacancy.vacancydate|date("d/m/Y") }}</span>
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell">
+            <br><span class="datestyle">{{ vacancy.vacancydate|date("d-m-Y") }}</span>
             <span><h2>{{ vacancy.function }} voor {{ vacancy.user.companyname }}</h2></span>
         </div>
     </div>
 
-    <div class="grid-x">
-        <div class="small-10 medium-10 large-10">
+    <div class="grid-x grid-padding-x">
+        <div class="small-6 medium-6 large-6 cell">
             <div>
                 <span class="leveltitle">Niveau: </span><span class='levelstyle'>{{ vacancy.level }}</span>
             </div>
         </div>
-        <div class="small-2 medium-2 large-2">
+        <div class="small-6 medium-6 large-6 cell">
             <div>
-                <span class="locationstyle right"><i class="fas fa-map-marker-alt" style="font-size: 2rem; color: #F15A24; right"></i> {{ vacancy.location }}</span>
+                <span class="locationstyle" style="float: right"><i class="fas fa-map-marker-alt" style="font-size: 2rem; color: #F15A24;"></i> {{ vacancy.location }}</span>
             </div>
         </div>
+    </div>
             
-        <br>
-
-        <div>
-            <br><font size="2">{{ vacancy.jobdescription }}</font>
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell">
+            <div>
+                <br><font size="2">{{ vacancy.jobdescription }}</font>
+            </div>
         </div>
     </div>
           
-    <div class="grid-x">
-        <div class="small-10 medium-10 large-10 left">
+    <div class="grid-x grid-padding-x">
+        <div class="small-12 medium-12 large-12 cell">
             {% if is_granted('ROLE_CANDIDATE') %}
                 {% if application is not null %}
                     <br>
@@ -96,7 +102,7 @@
     </div>
 
         <div class="grid-x grid-padding-x">
-            <div class="small-12 medium-12 large-12">
+            <div class="small-10 medium-10 large-10 cell">
                 {% if is_granted('ROLE_EMPLOYER') and app.user == vacancy.user %}
                     <div>
                         <br><br><span class='vacanciesstyle'>Sollicitanten op deze <span class="company">functie</span></span>
