--- a/templates/upload/index.html.twig
+++ b/templates/upload/index.html.twig
@@ -1,51 +1,6 @@
-{# 
-    <!-- LET OP JQUERY UITERAARD OOK KOPPELEN!!!!! -->
-    <script src="{{ asset('assets/js/SimpleAjaxUploader.js') }}"></script>  
+{% extends 'base.html.twig' %}
 
-    <script>
- $(document).ready(function() {
-
-            let uploader = new ss.SimpleUpload({
-                button: "upload",
-                url: "{{ path('upload') }}",
-                name: 'file', // upload parameter name die gebruikt wordt in de controller
-                responseType: 'json',
-                allowedExtensions: ['png', 'jpg', 'jpeg', 'pdf'],
-                hoverClass: 'hover-class-upload',
-                focusClass: 'hover-class-upload',
-                multiple: false,
-                disabledClass: 'ui-state-disabled',
-                autoSubmit: true,
-
-                onSizeError: function() {
-                    alert('File may not exceed 100MB');
-                },
-
-                onExtError: function() {
-                    alert('Invalid file type. Please use a PNG, JPG or JPEG or PDF file');
-                },
-
-                onSubmit: function( filename, extension, uploadBtn, fileSize ) {
-                    /// Bijvoorbeeld een overlay of een spinner starten...
-                    return(true);
-                },
-
-                onComplete: function (filename, response) {
-
-                    if(response.success === false) {
-                        alert(response.errors);
-                    } else {
-                    
-                        $("uploaded-file").val(response.file_id);
-                        $("uploaded-image").attr("src", response.file_id);
-                    }
-                }
-            });
-
-        });
-    </script>
-</head>     
-<body>
+{# <body>
     <div id="upload"
          style="width: 200px; height: 200px; background-color: #F00; cursor: pointer">
     </div>
