--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -9,15 +9,14 @@
                 <div class=" medium-1 large-1">
                 </div>
                 <div class="medium-7 large-7">
+
                     <img id="upload" style="width: 200px; height: 200px; background-color: blue; cursor: pointer"></img>
-                        <form action="/upload" method="POST"> 
+                        <form action="" method="POST"> 
                             <input type=" hidden text" style="width: 100px"; name="bestand" id="uploaded-file">
                         </form>
-                    <img id="uploaded-image" style="width: 300px; height: 300px">
-                    
-                    {# <br><div class="hexagonprofile">
-                        <img id="uploaded-image" class="hexagonprofile-img" src="{{ user.profilepictureurl }}"> #}
-                    </div>
+                    <img id="uploaded-image" style="width: 300px; height: 300px"></img>
+
+                </div>
                 </div>
                 <div class="medium-4 large-4">
                 </div>
